fixes to schedule and updated text

--- a/meta/bibl.tex
+++ b/meta/bibl.tex
@@ -1,6 +1,9 @@
 \renewcommand\bibname{References}
+
 \small
+\begin{singlespace}
 \bibliography{includes/references}
 \bibliographystyle{apalike}
+\end{singlespace}
 
 \nocite{*}
