--- a/includes/config.tex
+++ b/includes/config.tex
@@ -13,6 +13,9 @@
 \usepackage{tabularx}
 \usepackage{rotating}
 \usepackage{array}
+\usepackage{setspace}
+\usepackage{colortbl}
+\usepackage{hhline}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage[font=small]{caption}
