--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -3,9 +3,7 @@
 
 The primary objective of this project is to implement a \textit{multi-purpose recommender framework} to overcome specific issues of recommender systems explained further in this section. The focus on \emph{framework} intends to emphasise an ecosystem which provides a distinctive tool kit to build multiple recommender systems, yet guarantees a simple integration. Insofar the focus of the project will be in the design of an alternative -- perhaps novel -- architecture rather than in the details of techniques and algorithms.
 
-This section discusses the requirements of the proposed framework while pointing to aforementioned issues of recommender systems. The requirements \emph{interoperability}, \emph{abstraction}, \emph{ease of integration} and \emph{service-orientation} will become measures on how successful the proposed solution is in overcoming those issues.
-
-Finally, existing research as well as solutions are examined in their coping with those challenges.
+This section discusses the requirements of the project. The requirements \emph{interoperability}, \emph{abstraction} and \emph{ease of integration} will become measures on how successful the project is in overcoming those issues.
 
 
 
