--- a/sections/solution.tex
+++ b/sections/solution.tex
@@ -1,6 +1,6 @@
 \chapter{Technical Solution}
 
-In this section an overview of the design, architecture and distinctive features of the solution is given. Then, technical decisions are explained.
+In this section an overview of the design and architecture of the project is provided. Then, choices on the technology such as programming languages and databases are explained. Finally, a project plan is laid out.
 
 
 
